第一次提交bootstrap框架

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en"><img src="1.jpg" height="768" width="1024"/>
-<head>
+<html lang="en">
+<<head>
     <meta charset="UTF-8">
 
 
